--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ allprojects {
 	    maven {
 	    	url "https://oss.sonatype.org/content/repositories/snapshots/"
 	    }
+	    maven {
+	      url 'https://packages.confluent.io/maven/'
+    	}
 	}
 }
 
