Add support for overlapping windowed aggregation

--- a/src/main/resources/META-INF/application.properties
+++ b/src/main/resources/META-INF/application.properties
@@ -5,7 +5,8 @@ configuration.kafka.topic=configuration
 kafka.bootstrap.servers=localhost:9092
 kafka.input.topic=input
 kafka.output.topic=output
-window.size.ms=1000
+window.size.ms=3600000
+window.advance.ms=1000
 window.grace.ms=0
 num.threads=1
 commit.interval.ms=100
