--- a/src/main/resources/META-INF/application.properties
+++ b/src/main/resources/META-INF/application.properties
@@ -1,14 +1,12 @@
-configuration.host=localhost
-configuration.port=8082
-configuration.kafka.topic=configuration
-
 kafka.bootstrap.servers=localhost:9092
 kafka.input.topic=input
+kafka.configuration.topic=configuration
+kafka.feedback.topic=configuration
 kafka.output.topic=output
 
 schema.registry.url=http://localhost:8091
 
-window.size.ms=1000
+window.size.ms=5000
 window.grace.ms=0
 num.threads=1
 commit.interval.ms=100
