--- a/src/main/resources/META-INF/application.properties
+++ b/src/main/resources/META-INF/application.properties
@@ -6,8 +6,9 @@ kafka.output.topic=output
 
 schema.registry.url=http://localhost:8091
 
-window.size.ms=5000
-window.grace.ms=0
+emit.period.ms=5000
+grace.period.ms=0
+
 num.threads=1
 commit.interval.ms=100
 cache.max.bytes.buffering=-1
