Set default feedback topic name

--- a/src/main/resources/META-INF/application.properties
+++ b/src/main/resources/META-INF/application.properties
@@ -1,7 +1,7 @@
 kafka.bootstrap.servers=localhost:9092
 kafka.input.topic=input
 kafka.configuration.topic=configuration
-kafka.feedback.topic=configuration
+kafka.feedback.topic=aggregation-feedback
 kafka.output.topic=output
 
 schema.registry.url=http://localhost:8091
