--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,20 @@
-apply plugin: 'application'
-apply plugin: 'pmd'
-apply plugin: 'checkstyle'
-apply plugin: 'com.github.spotbugs'
-apply plugin: 'eclipse'
-
 buildscript {
   repositories {
     maven {
       url "https://plugins.gradle.org/m2/"
     }
   }
-  dependencies {
-    classpath "gradle.plugin.com.github.spotbugs:spotbugs-gradle-plugin:1.6.3"
-  }
 }
+
+plugins {
+  id "com.github.spotbugs" version "1.7.1"
+}
+
+apply plugin: 'application'
+apply plugin: 'pmd'
+apply plugin: 'checkstyle'
+apply plugin: 'eclipse'
+
 
 sourceCompatibility = "1.11"
 targetCompatibility = "1.11"
@@ -23,7 +24,7 @@ configurations.all {
   resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 
-allprojects { 
+allprojects {
   repositories {
 	jcenter()
 	maven {
@@ -46,7 +47,7 @@ dependencies {
   testCompile 'junit:junit:4.12'
   testCompile 'com.github.stefanbirkner:system-rules:1.17.0'
   testCompile 'org.apache.kafka:kafka-streams-test-utils:2.6.0'
-    
+  testImplementation 'io.confluent:kafka-streams-avro-serde:5.3.2'
 }
 
 mainClassName = "titan.ccp.aggregation.AggregationService"
@@ -87,7 +88,7 @@ tasks.withType(com.github.spotbugs.SpotBugsTask) {
 task checkstyle {
   group 'Quality Assurance'
   description 'Run Checkstyle'
-  
+
   dependsOn 'checkstyleMain'
   dependsOn 'checkstyleTest'
 }
@@ -103,7 +104,7 @@ task pmd {
 task spotbugs {
   group 'Quality Assurance'
   description 'Run SpotBugs'
-  
+
   dependsOn 'spotbugsMain'
   dependsOn 'spotbugsTest'
 }
