--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
 }
 
 plugins {
-  id "com.github.spotbugs" version "1.7.1"
+  id "com.github.spotbugs" version "4.5.1"
 }
 
 apply plugin: 'application'
@@ -37,17 +37,17 @@ allprojects {
 }
 
 dependencies {
-  compile('org.industrial-devops:titan-ccp-common:0.1.0-SNAPSHOT') { changing = true }
-  compile('org.industrial-devops:titan-ccp-common-kafka:0.1.0-SNAPSHOT') { changing = true }
-  compile 'org.apache.kafka:kafka-streams:2.6.0'
-  compile 'com.google.guava:guava:20.0'
-  compile 'org.slf4j:slf4j-simple:1.7.25'
+  implementation('org.industrial-devops:titan-ccp-common:0.1.0-SNAPSHOT') { changing = true }
+  implementation('org.industrial-devops:titan-ccp-common-kafka:0.1.0-SNAPSHOT') { changing = true }
+  implementation 'org.apache.kafka:kafka-streams:2.6.0'
+  implementation 'com.google.guava:guava:20.0'
+  implementation 'org.slf4j:slf4j-simple:1.7.25'
 
   // Use JUnit test framework
-  testCompile 'junit:junit:4.12'
-  testCompile 'com.github.stefanbirkner:system-rules:1.17.0'
-  testCompile 'org.apache.kafka:kafka-streams-test-utils:2.6.0'
-  testImplementation 'io.confluent:kafka-streams-avro-serde:5.3.2'
+  testImplementation 'junit:junit:4.12'
+  testImplementation 'com.github.stefanbirkner:system-rules:1.17.0'
+  testImplementation 'org.apache.kafka:kafka-streams-test-utils:2.6.0'
+  testImplementation 'io.confluent:kafka-streams-avro-serde:5.5.1'
 }
 
 mainClassName = "titan.ccp.aggregation.AggregationService"
@@ -60,7 +60,7 @@ pmd {
 }
 
 checkstyle {
-  configDir = file("config")
+  configDirectory = file("config")
   configFile = file("config/checkstyle.xml")
   maxWarnings = 0
   ignoreFailures = false
@@ -72,12 +72,12 @@ spotbugs {
   reportLevel = "low"
   effort = "max"
   ignoreFailures = false
-  toolVersion = '3.1.7'
+  toolVersion = '4.1.3'
 }
 
 // Per default XML reports for SpotBugs are generated
 // Include this to generate HTML reports
-tasks.withType(com.github.spotbugs.SpotBugsTask) {
+tasks.withType(com.github.spotbugs.snom.SpotBugsTask) {
   reports {
     // Either HTML or XML reports can be activated
     html.enabled true
