--- a/settings.gradle
+++ b/settings.gradle
@@ -15,4 +15,4 @@ include 'api'
 include 'services:webservice'
 */
 
-rootProject.name = 'titanccp-aggregation'
+rootProject.name = 'titan-ccp-aggregation'
