--- a/src/main/resources/META-INF/application.properties
+++ b/src/main/resources/META-INF/application.properties
@@ -1,3 +1,6 @@
+application.name=@application.name@
+application.version=@application.version@
+
 kafka.bootstrap.servers=localhost:9092
 kafka.input.topic=input
 kafka.configuration.topic=configuration
